Hides the button in case of success

--- a/src/50_Samples_%26_Templates/Quiz.html
+++ b/src/50_Samples_%26_Templates/Quiz.html
@@ -55,6 +55,9 @@ After selecting one of the answers, you will be asked to answer the following qu
   form#quiz-form amp-selector > ul {
     list-style: none;
   }
+  form.amp-form-submit-success  input {
+  display: none
+  }
   form input{
     margin-left: 16px;
     -webkit-appearance: none;
