--- a/src/50_Samples_%26_Templates/Quiz.html
+++ b/src/50_Samples_%26_Templates/Quiz.html
@@ -6,7 +6,8 @@
 #### Introduction
 
 This is a sample template for a quiz in AMP consisting of four questions.
-After selecting one of the answers, you will be asked to answer the following question until all are answered and you can submit your answers.
+After selecting one of the answers, you will be asked to answer the following question until all are answered.
+In case one or more answers are not correct, you will be redirected to the first question.
 
 -->
 <!-- -->
