Fixes button and some inputs

--- a/src/20_Components/amp-app-banner.html
+++ b/src/20_Components/amp-app-banner.html
@@ -73,7 +73,7 @@ The `amp-app-banner` can be fully customized by the developer as long as the hei
     </div>
     <div id="banner-text">Learn more about AMP in the Medium App.</div>
     <div id="banner-action">
-      <button class="ampstart-btn" open-button>View in app</button>
+      <button class="ampstart-btn mr1 caps" open-button>View in app</button>
     </div>
   </amp-app-banner>
 
