--- a/src/20_Components/amp-sidebar.html
+++ b/src/20_Components/amp-sidebar.html
@@ -42,9 +42,6 @@
       margin-bottom: 20px;
       list-style: none;
     }
-    button {
-      margin-left: 20px;
-    }
   </style>
 </head>
 <body>
@@ -82,17 +79,17 @@
     <!--
     Click to toggle the sidebar.
     -->
-    <button on="tap:sidebar.toggle" class="ampstart-btn">Toggle sidebar</button>
+    <button on="tap:sidebar.toggle" class="ampstart-btn caps ml1">Toggle sidebar</button>
 
     <!--
     Click to open the sidebar.
     -->
-    <button on="tap:sidebar.open" class="ampstart-btn">Open sidebar</button>
+    <button on="tap:sidebar.open" class="ampstart-btn caps ml1">Open sidebar</button>
 
     <!--
     Click to close the sidebar.
     -->
-    <button on="tap:sidebar.close" class="ampstart-btn">Close sidebar</button>
+    <button on="tap:sidebar.close" class="ampstart-btn caps ml1">Close sidebar</button>
 
 </body>
 </html>
