--- a/src/20_Components/amp-list.html
+++ b/src/20_Components/amp-list.html
@@ -69,7 +69,7 @@
   -->
   <amp-list width="auto" height="10" layout="fixed-height" src="<%host%>/json/examples.json" template="amp-template-id">
     <div>
-  <button overflow role="button" aria-label="Show more" class="list-overflow ampstart-btn">
+  <button overflow role="button" aria-label="Show more" class="list-overflow ampstart-btn ampstart-btn-secondary caps">
     Show more
   </button>
     </div>
