ues ampstart-btn for inout with type submit

--- a/src/50_Samples_%26_Templates/Product.html
+++ b/src/50_Samples_%26_Templates/Product.html
@@ -331,7 +331,7 @@ div.square {
       <!-- In this sample we don't embed the video directly into the page, but instead show it in a lightbox using the `amp-lightbox` component. Learn more about `amp-lightbox` [here](/components/amp-lightbox/).-->
 
       <div id="video-container">
-        <a on="tap:watch-video-lightbox" role="button" class="button button-secondary play" tabindex="0">
+        <a on="tap:watch-video-lightbox" role="button" class="ampstart-btn caps play" tabindex="0">
           Show Video
         </a>
 
@@ -569,7 +569,7 @@ div.square {
             </ul>
           </amp-selector>
         </div>
-        <input type="submit" class="button button-primary" name="add-to-cart" value="add to cart">
+        <input type="submit" class="ampstart-btn caps" name="add-to-cart" value="add to cart">
         <input type="hidden" name="name" value="Apple">
         <input type="hidden" name="price" value="$1.99">
         <input name="clientId" type="hidden" value="CLIENT_ID(cart)" data-amp-replace="CLIENT_ID">
